4.5 -> 5.0:
    - jbj: start marking availablePackages for destruction.
    - jbj: make a pass checking rpmts opaqueness.
    - jbj: rpmtsGoal() and rpmtsSetGoal() added.
    - jbj: add rpmgiGetFlags() for opaque rpmgi queries.
    - jbj: permit --ftswalk on sign/verify paths. not yet install ...
    - jbj: use ftsOpts from CLI where rpmgi is used.
    - jbj: insure srpm file dispositions are FA_CREATE.
    - jbj: enable Header performance metrics, tied to --stats.
    - jbj: add Header performance metrics, disabled for now.
    - jbj: eliminate headerNVR, use headerNEVRA instead.
    - jbj: eliminate the rpmrbFoo, use rpmcliInstallFoo instead.
    - jbj: load/unload header macros for %{_sourcedir} et al expansions.
    - jbj: don't open rpmdb O_RDWR iff srpm to permit non-root installs.
    - jbj: prepare for open as a macro in bleeding edge glibc-2.6.90+.
    - jbj: permit mixed binary/source installation transactions.
    - jbj: re-add rpmcache/rpmcmp/rpmdigest tools.
    - jbj: more rpmInstall refactoring.
    - jbj: use rpmgi for --addsign/--checksig arg iteration.
    - jbj: repair a minor rpmInstall and major matchpathcon_init() memleaks.
    - jbj: unbreak --install/--upgrade/--freshen, memleaks checked.
    - jbj: use rpmgi for --install/--upgrade/--freshen. non-functional atm.
    - jbj: add getter/setter for header magic to hide _newmagic construction.
    - jbj: functional sign/verify on --nolead --newmagic packages.
    - jbj: no-operation code paths for --nolead --nosigh packages.
    - jbj: functional sign/verify on --nolead packages.
    - jbj: add rpmkey, a keyctl(1) clone.
    - jbj: disable RPMv3 RSA/DSA signing.
    - jbj: mark RPMv3 code for optional compilation.
    - jbj: snarf /usr and /var values from auto fu to predefine macro values.
    - jbj: disable rpmbuild --sign for now.
    - afb: extract provides from .jnilib's (Fink).
    - afb: always include system.h first (Leopard fix? Fink).
    - afb: include "byte" typedef from beecrypt.